--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -6,6 +6,8 @@
       "configurationType": "Release",
       "buildRoot": "${projectDir}\\Build\\${name}",
       "installRoot": "${projectDir}\\Install\\${name}",
+      "cmakeCommandArgs": "",
+      "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "clang_cl_x64_x64" ],
       "intelliSenseMode": "windows-clang-x64"
