--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1055,6 +1055,10 @@ set(QT_GUI src/qt_gui/about_dialog.cpp
            src/qt_gui/settings_dialog.h
            src/qt_gui/settings_dialog.ui
            src/qt_gui/main.cpp
+           src/qt_gui/gui_settings.cpp
+           src/qt_gui/gui_settings.h
+           src/qt_gui/settings.cpp
+           src/qt_gui/settings.h
            ${EMULATOR}
            ${RESOURCE_FILES}
            ${TRANSLATIONS}
