--- a/REUSE.toml
+++ b/REUSE.toml
@@ -53,6 +53,7 @@ path = [
     "src/images/refreshlist_icon.png",
     "src/images/settings_icon.png",
     "src/images/fullscreen_icon.png",
+    "src/images/users_icon.png",
     "src/images/stop_icon.png",
     "src/images/utils_icon.png",
     "src/images/shadPS4.icns",
