use json to read local file

--- a/externals/CMakeLists.txt
+++ b/externals/CMakeLists.txt
@@ -230,3 +230,7 @@ if (APPLE)
         add_subdirectory(MoltenVK)
     endif()
 endif()
+
+#nlohmann json 
+set(JSON_BuildTests OFF CACHE INTERNAL "")
+add_subdirectory(json)
